<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/discovery"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/back"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/what_s_new_today"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/banner_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/browse_all"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/see_more"
            style="@style/Theme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_more"
            android:layout_margin="5dp"
            android:textColor="@drawable/button_text" />


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>