<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintTop_toBottomOf="@id/back" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Theme.Textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/search_all_photos"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/see_more"
                style="@style/Theme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/see_more"
                android:textColor="@drawable/button_text" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>